--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
+    "@next/font": "^13.4.7",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "mongoose": "6.11.1",
     "next": "13.4.5",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "install": "^0.13.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
